--- a/skills/csharp/experimental/bingsearchskill/appsettings.json
+++ b/skills/csharp/experimental/bingsearchskill/appsettings.json
@@ -16,7 +16,7 @@
   },
   "cosmosDb": {
     "authkey": "",
-    "collectionId": "",
+    "containerId": "",
     "cosmosDBEndpoint": "",
     "databaseId": ""
   },
