--- a/skills/csharp/experimental/phoneskill/appsettings.json
+++ b/skills/csharp/experimental/phoneskill/appsettings.json
@@ -22,7 +22,7 @@
     "container": "transcripts"
   },
   "cosmosDb": {
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-collection",
     "databaseId": "botstate-db",
     "cosmosDBEndpoint": "",
     "authKey": ""
