update lg & sdk

--- a/skills/csharp/experimental/weatherskill/appsettings.json
+++ b/skills/csharp/experimental/weatherskill/appsettings.json
@@ -16,9 +16,9 @@
   },
   "cosmosDb": {
     "authkey": "",
-    "collectionId": "",
+    "containerId": "botstate-collection",
     "cosmosDBEndpoint": "",
-    "databaseId": ""
+    "databaseId": "botstate-db"
   },
   "WeatherApiKey": ""
 }
