--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
@@ -188,7 +188,7 @@
       "properties": {
         "actionSuccess": {
           "type": "bool",
-          "description": "result of action"
+          "description": "Result of action"
         },
         "todoList": {
           "type": "array",
