--- a/skills/csharp/tests/phoneskill.tests/PhoneSkill.Tests.csproj
+++ b/skills/csharp/tests/phoneskill.tests/PhoneSkill.Tests.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <NoWarn>NU1701</NoWarn>
-    <Platforms>AnyCPU;x64;x86</Platforms>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
