update music skill

--- a/skills/csharp/experimental/musicskill/appsettings.json
+++ b/skills/csharp/experimental/musicskill/appsettings.json
@@ -11,7 +11,7 @@
   },
   "cosmosDb": {
     "authKey": "",
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-collection",
     "cosmosDBEndpoint": "",
     "databaseId": "botstate-db"
   },
