--- a/skills/csharp/experimental/eventskill/appsettings.json
+++ b/skills/csharp/experimental/eventskill/appsettings.json
@@ -12,7 +12,7 @@
   "cosmosDb": {
     "authkey": "",
     "cosmosDBEndpoint": "",
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-collection",
     "databaseId": "botstate-db"
   },
   "properties": {},
