[ToDo] Add action code (#56)
* weather mainDialog

* todo actions manifest

* weather action manifest

* revert

* draft weather action code

* update get & add LUIS

* update manifest

* fix comments

* fix comments

* update action code

* draft

* todo action code

* draft test

* draft

* todo action

* merge

* fix comments

* fix comments

--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.0.json
@@ -36,7 +36,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteToDo": {
@@ -47,7 +47,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteAll": {
@@ -58,7 +58,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/actionResult"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "markToDo": {
@@ -69,7 +69,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "markAll": {
@@ -80,7 +80,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/actionResult"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "showToDo": {
@@ -91,7 +91,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     }
   },
@@ -118,21 +118,21 @@
         }
       }
     },
-    "todoList": {
-      "type": "array",
-      "description": "List of todo tasks",
-      "items": {
-        "type": "string"
-      }
-    },
-    "actionResult": {
+    "todoListInfo": {
       "type": "object",
       "properties": {
         "actionSuccess": {
           "type": "bool",
-          "description": "result of action"
+          "description": "Result of action"
+        },
+        "todoList": {
+          "type": "array",
+          "description": "List of todo tasks",
+          "items": {
+            "type": "string"
+          }
         }
       }
-    }
+    }    
   }
 }
