--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
@@ -101,7 +101,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteToDo": {
@@ -112,7 +112,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "deleteAll": {
@@ -123,7 +123,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/actionResult"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "markToDo": {
@@ -134,7 +134,7 @@
         "$ref": "#/definitions/todoInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "markAll": {
@@ -145,7 +145,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/actionResult"
+        "$ref": "#/definitions/todoListInfo"
       }
     },
     "showToDo": {
@@ -156,7 +156,7 @@
         "$ref": "#/definitions/listInfo"
       },
       "resultValue": {
-        "$ref": "#/definitions/todoList"
+        "$ref": "#/definitions/todoListInfo"
       }
     }
   },
@@ -183,19 +183,19 @@
         }
       }
     },
-    "todoList": {
-      "type": "array",
-      "description": "List of todo tasks",
-      "items": {
-        "type": "string"
-      }
-    },
-    "actionResult": {
+    "todoListInfo": {
       "type": "object",
       "properties": {
         "actionSuccess": {
           "type": "bool",
-          "description": "result of action"
+          "description": "Result of action"
+        },
+        "todoList": {
+          "type": "array",
+          "description": "List of todo tasks",
+          "items": {
+            "type": "string"
+          }
         }
       }
     }
