--- a/skills/csharp/experimental/weatherskill/WeatherSkill.csproj
+++ b/skills/csharp/experimental/weatherskill/WeatherSkill.csproj
@@ -24,8 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Content\SixHourForecast.1.0.json" />
-    <EmbeddedResource Include="Content\SixHourForecast.json" />
+    <None Include="Content\SixHourForecast.1.0.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\SixHourForecast.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
