--- a/skills/csharp/experimental/phoneskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/phoneskill/wwwroot/manifest/manifest-1.0.json
@@ -4,7 +4,7 @@
   "name": "Phone Skill",
   "description": "The Phone experimental skill provides phone related capabilities and supports Office and Google contacts.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.0",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/PhoneSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -57,7 +57,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         }
       }
