--- a/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.0.json
@@ -4,7 +4,7 @@
   "name": "Bing Skill",
   "description": "The Bing Search skill provides general Bing capabilities.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.0",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/BingSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -61,7 +61,7 @@
           "description": "The description of search result"
         },
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "Result of action"
         }
       }
