--- a/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.0.json
@@ -4,7 +4,7 @@
   "name": "News Skill",
   "description": "The News experimental skill provides simple retrieval of News from Bing Search.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.0",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/NewsSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -112,7 +112,7 @@
           }
         },
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "The result of action"
         }
       }
