--- a/skills/csharp/experimental/restaurantbookingskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/restaurantbookingskill/wwwroot/manifest/manifest-1.1.json
@@ -4,7 +4,7 @@
   "name": "Restaurant Booking Skill",
   "description": "The Restaurant Booking experimental skill provides an example of Restaurant Booking.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.1",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/RestaurantBookingSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -86,7 +86,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         }
       }
