--- a/skills/csharp/experimental/weatherskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/weatherskill/wwwroot/manifest/manifest-1.1.json
@@ -4,7 +4,7 @@
   "name": "Weather Skill",
   "description": "The Weather skill provides an example of displaying the current weather using AccuWeather.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.1",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/WeatherSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -70,7 +70,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         },
         "summary": {
