--- a/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/pointofinterestskill/wwwroot/manifest/manifest-1.1.json
@@ -4,7 +4,7 @@
   "name": "Point Of Interest Skill",
   "description": "The Point of Interest skill provides PoI search capabilities leveraging Azure Maps and Foursquare.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.1",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/PointOfInterestSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -229,7 +229,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "Result of the action."
         },
         "name": {
