--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.1.json
@@ -4,7 +4,7 @@
   "name": "ToDo Skill",
   "description": "The ToDo skill provides task related capabilities and supports Office based tasks.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.1",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/ToDoSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -187,7 +187,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "Result of action"
         },
         "todoList": {
