change bool to boolean

--- a/skills/csharp/emailskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/emailskill/wwwroot/manifest/manifest-1.1.json
@@ -211,7 +211,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         },
         "emailList": {
