--- a/skills/csharp/emailskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/emailskill/wwwroot/manifest/manifest-1.0.json
@@ -142,7 +142,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         },
         "emailList": {
